--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "client": "npm start --prefix client",
     "div": "concurrently \"npm run server\" \"npm run client\""
   },
+  "engines": {
+    "node": ">=16.20.1"
+  },
   "author": "akash",
   "license": "MIT",
   "dependencies": {
